workshops/dockerton-2018/kubernetes-workshop-crm/k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: crm-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crm-service
  template:
    metadata:
      labels:
        app: crm-service
    spec:
      containers:
      - name: container
        image: 579478677147.dkr.ecr.eu-central-1.amazonaws.com/dockerton/crm:$(Build.BuildId)
        ports:
        - containerPort: 80
          name: web
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
