workshops/dockerton-2018/kubernetes-workshop-crm/k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: crm-service
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: api.dfds.cloud
    http:
      paths:
      - path: /crm
        backend:
          serviceName: crm-service
          servicePort: external
